# capteur

./: README.md
src/: Cargo.toml
src/capteur/: Cargo.toml
src/capteur-cli/: Cargo.toml  package-lock.json
src/capteur-cli/src/: main.rs
src/capteur-client/: package-lock.json  package.json
src/capteur-client/src/: App.css  App.js  index.css  index.js
src/capteur-client/src-tauri/: Cargo.toml  tauri.conf.json
src/capteur-client/src-tauri/src/: main.rs
src/capteur-client/src/components/ui/: NavBar.css  NavBar.js
src/capteur-client/src/contexts/: WSPassthrough.js
src/capteur-client/src/pages/: Readings.css  Readings.js
src/capteur/src/: database.rs  lib.rs  messages.rs  transports.rs  util.rs  websockets.rs
