[package]
name = "capteur"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.1"
futures = "0.3.21"
lapin = "2.0.3"
parking_lot = "0.12.0"
tokio = { version = "1.17.0", features = ["full"] }
tracing = "0.1.31"
tracing-subscriber = { version = "0.3.9", features = ["fmt", "env-filter"] }
